Lock the Polypheny Home Directory (#501)