@@ -22,7 +22,6 @@ import static org.polypheny.db.util.Static.RESOURCE;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.polypheny.db.adapter.Adapter;
@@ -110,7 +109,7 @@ public abstract class SqlDdl extends SqlCall {
     protected List<LogicalColumn> getColumns( Context context, long tableId, SqlNodeList columns ) {
         return columns.getList().stream()
                 .map( c -> getColumn( context, tableId, (SqlIdentifier) c ) )
-                .collect( Collectors.toList() );
+                .toList();
     }
 
 
